--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "halalharvest",
-  "version": "0.1.0",
-  "private": true,
+  "name": "HalalHarvest",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7"
   }
 }
